--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,8 @@ body {
     cursor: pointer;
 }
 
-.hero-btn:hover {
+.hero-btn:hover,
+.hero-btn:focus {
     background-color: var(--bg-btn-cl-hover);
 }
 
