--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: calc(19 / 16);
+    text-align: center;
     letter-spacing: 0.03em;
 
 }
@@ -166,6 +167,7 @@ body {
 .team-item-text {
     font-size: 16px;
     line-height: calc(19 / 16);
+    text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-txt-cl);
 
@@ -186,7 +188,6 @@ body {
 }
 
 .address-link-map {
-    font-weight: 400;
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -196,7 +197,6 @@ body {
 
 .address-link-mail,
 .address-link-phone {
-    font-weight: 400;
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -239,7 +239,6 @@ body {
 }
 
 .portfolio-item-text {
-    font-weight: 400;
     font-size: 16px;
     line-height: calc(30 / 16);
     letter-spacing: 0.03em;
